--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,1 @@
-.wrapper {
-    display: grid;
-    grid-template-areas:
-        'header'
-        'main'
-        'footer';
-    grid-template-rows: 80px 1fr 120px;
-    height: 100vh;
-    margin: 0;
-}
-
-.header {
-    grid-area: header;
-    background-color: #ffffff;
-}
-
-.footer {
-    grid-area: footer;
-    background-color: #ffffff;
-}
-.main {
-    grid-area: main;
-}
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Libre+Franklin:300,400,600,700&display=swap');
